--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,14 @@
 .App {
   text-align: center;
+  font-size: 5rem;
+}
+
+button{
+  /* width: 5rem; */
+  /* height: 5rem; */
+  font-size: 3rem;
+  padding: 2rem;
+  margin: 0.5rem;
 }
 
 .App-logo {
